# rosbuilder_knowledge_base

phase0/section1/lesson1/c++forRobotics/: c++forRoboticsch1.odt  c++forRoboticsch2.odt  c++forRoboticsch3.odt  c++forRoboticsch4.odt  c++forRoboticsch5.odt  c++forRoboticsch6.odt
phase0/section1/lesson1/c++forRobotics/src/cpp_course_repo/c_scripts/src/: unit1_exercise.cpp  unit2_exercise.cpp  unit3_exercise.cpp  unit4_exercise.cpp  unit5_exercise.cpp
phase0/section1/lesson1/c++forRobotics/src/cpp_course_repo/utilities/: name.cpp  test_file.cpp
phase1/section1/checkpoint1/catkin_ws/src/my_rb1_description/: CMakeLists.txt  package.xml
phase1/section1/checkpoint1/catkin_ws/src/my_rb1_description/urdf/: my_rb1.xacro
phase1/section1/checkpoint1/catkin_ws/src/my_rb1_gazebo/: CMakeLists.txt  package.xml
phase1/section1/checkpoint1/catkin_ws/src/my_rb1_ros/: CMakeLists.txt  package.xml
phase1/section1/checkpoint1/catkin_ws/src/my_rb1_ros/launch/: rotate_service.launch
phase1/section1/checkpoint1/catkin_ws/src/my_rb1_ros/scripts/: rotate_service.py
phase1/section1/lesson1/: ros-basics-in5days-ch7.odt  ros-basics-in5days-ch8.odt  ros-basics-in5days-ch9.odt
phase1/section1/lesson1/src/action_client_pkg/: CMakeLists.txt  ardrone_action_client.cpp
phase1/section1/lesson1/src/action_client_pkg/launch/: my_launch_file.launch
phase1/section1/lesson1/src/action_server_pkg/: CMakeLists.txt  package.xml
phase1/section1/lesson1/src/action_server_pkg/src/: fibonacci_action_server.launch
phase1/section1/lesson1/src/exercise_22/: CMakeLists.txt  package.xml
phase1/section1/lesson1/src/exercise_22/src/: move_robot.cpp
phase1/section1/lesson1/src/my_package/: CMakeLists.txt  package.xml
phase1/section1/lesson1/src/my_package/launch/: my_package_launch_file.launch
phase1/section1/lesson1/src/odom_subscriber_pkg/: CMakeLists.txt  package.xml
phase1/section1/lesson1/src/odom_subscriber_pkg/launch/: odom_subscriber.launch
phase1/section1/lesson1/src/odom_subscriber_pkg/src/: odom_subscriber.cpp
phase1/section1/lesson1/src/service_client_pkg/: CMakeLists.txt
phase1/section1/lesson1/src/service_client_pkg/launch/: simple_service_client.launch
phase1/section1/lesson1/src/service_client_pkg/src/: simple_service_client.cpp
phase1/section1/lesson1/src/service_server_pkg/: CMakeLists.txt  package.xml
phase1/section1/lesson1/src/service_server_pkg/launch/: simple_service_server.launch
phase1/section1/lesson1/src/topics_25/: CMakeLists.txt  package.xml
phase1/section1/lesson1/src/topics_25/launch/: publish_age.launch
phase1/section1/lesson1/src/topics_25/src/: publish_age.cpp
phase1/section1/lesson1/src/topics_quiz/launch/: topics_quiz.launch
phase1/section1/lesson1/src/topics_quiz/scripts/: topics_quiz_node.py
phase1/section1/lesson2/: .~lock.gazebo-unit1.odt#  .~lock.unit2.odt#  unit3.odt  unit4.odt  unit5.odt
phase1/section1/lesson2/src/robot_description/launch/: rviz.launch  spawn.launch
phase1/section2/: .~lock.advancedc++unit1.odt#
phase1/section2/checkpooint2ws/: default (2).ipynb
phase1/section2/checkpooint2ws/catkin_ws (1)/src/advanced_cpp_auxiliary_pkgs/robotinfo_msgs/: CMakeLists.txt  package.xml
phase1/section2/checkpooint2ws/catkin_ws (1)/src/advanced_cpp_auxiliary_pkgs/robotinfo_msgs/msg/: RobotInfo10Fields.msg
phase1/section2/checkpooint2ws/catkin_ws (1)/src/robot_gui/: CMakeLists.txt
phase1/section2/checkpooint2ws/catkin_ws (1)/src/robot_gui/include/robot_gui/: robot_gui_node.h
phase1/section2/checkpooint2ws/catkin_ws (1)/src/robot_gui/src/: robot_gui_node.cpp
phase1/section2/checkpooint2ws/catkin_ws (1)/src/robot_info/: CMakeLists.txt  package.xml
phase1/section2/checkpooint2ws/catkin_ws (1)/src/robot_info/include/robot_info/: agv_robot_info_class.h  hydraulic_system_monitor.h  robot_info.h
phase1/section2/checkpooint2ws/catkin_ws (1)/src/robot_info/src/: agv_robot_info_class.cpp  agv_robot_info_main.cpp  hydraulic_system_monitor.cpp  robot_info_class.cpp  robot_info_main.cpp
phase1/section2/lesson1/: advancedc++unit1.odt  unit2.odt  unit3.odt  unit4.odt  unit5.odt  unit6.odt  unit7.odt  unit8.odt
phase1/section2/lesson1/src/exercises_unit_2/: CMakeLists.txt
phase1/section2/lesson1/src/modern_cpp_course/robot_commander/: CMakeLists.txt
phase1/section2/lesson1/src/modern_cpp_course/robot_commander/src/: robot_commander.cpp
phase1/section3/checkpoint3/: default (1).ipynb
phase1/section3/checkpoint3/ros2_ws/src/robot_patrol/: CMakeLists.txt  package.xml
phase1/section3/checkpoint3/ros2_ws/src/robot_patrol/launch/: start_patrolling.launch.py
phase1/section3/checkpoint3/ros2_ws/src/robot_patrol/src/: patrol.cpp
phase1/section3/section3/: .~lock.Untitled 1.odt#  .~lock.unit8.odt#  unit2.odt  unit3.odt  unit4.odt  unit5,6.odt  unit7.odt  unit8.odt
phase1/section3/section3/ros2-basics/src/topic_publisher_pkg/: CMakeLists.txt
phase1/section3/section3/ros2-basics/src/topic_subscriber_pkg/: CMakeLists.txt
