<?xml version="1.0"?>
<package format="2">
  <name>my_rb1_description</name>
  <version>0.0.0</version>
  <description>The my_rb1_description package</description>

  <maintainer email="user@todo.todo">user</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
